--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,9 @@
     "resolveJsonModule": true,
     "declaration": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
   },
   "include": ["src"],
+  "files":["types.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
