--- a/.prettierrc
+++ b/.prettierrc
@@ -1,30 +1,6 @@
 {
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "all",
-    "useTabs": false,
-
-    "overrides": [
-        {
-            "files": "*.component.html",
-            "options": {
-                "parser": "angular",
-                "tabWidth": 4
-            }
-        },
-        {
-            "files": "*.scss",
-            "options": {
-                "parser": "scss",
-                "tabWidth": 2
-            }
-        },
-        {
-            "files": ["*.json", ".prettierrc"],
-            "options": {
-                "parser": "json",
-                "tabWidth": 4
-            }
-        }
-    ]
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 2
 }
