--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@types/express": "^5.0.5",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.66.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
