--- a/.env,example
+++ b/.env,example
@@ -1,17 +1,17 @@
-JWT_SECRET="TIETE"
-JWT_EXPIRATION_TIME=21600
+JWT_SECRET=''
+JWT_EXPIRATION_TIME=''
 
 // REDIS \\
 
-REDIS_HOST=redis-17077.c265.us-east-1-2.ec2.cloud.redislabs.com
-REDIS_PORT=17077
-REDIS_PASSWORD='HFOMwDcbzqpVD4C4mLZiVdxZQDvX6JWu'
-REDIS_DB=0
+REDIS_HOST=''
+REDIS_PORT=''
+REDIS_PASSWORD=''
+REDIS_DB=''
 
 // DATABASE \\
 
-DB_HOST="localhost",
-DB_PORT=5432,
-DB_USERNAME="postgres",
-DB_PASSWORD="admin",
-DB_DATABASE="gymapp",
+DB_HOST=''
+DB_PORT=''
+DB_USERNAME=''
+DB_PASSWORD=''
+DB_DATABASE=''
