--- a/.env,example
+++ b/.env,example
@@ -1,17 +1,17 @@
-JWT_SECRET=''
-JWT_EXPIRATION_TIME=''
+JWT_SECRET='"TIETE"'
+JWT_EXPIRATION_TIME='21600'
 
 // REDIS \\
 
-REDIS_HOST=''
-REDIS_PORT=''
-REDIS_PASSWORD=''
-REDIS_DB=''
+REDIS_HOST='redis-17077.c265.us-east-1-2.ec2.cloud.redislabs.com'
+REDIS_PORT='17077'
+REDIS_PASSWORD=''HFOMwDcbzqpVD4C4mLZiVdxZQDvX6JWu''
+REDIS_DB='0'
 
 // DATABASE \\
 
-DB_HOST=''
-DB_PORT=''
-DB_USERNAME=''
-DB_PASSWORD=''
-DB_DATABASE=''
+DB_HOST='"localhost",'
+DB_PORT='5432,'
+DB_USERNAME='"postgres",'
+DB_PASSWORD='"admin",'
+DB_DATABASE='"gymapp",'
