--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
+    "git-filter-repo": "^0.0.30",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
